Add TWIC work info

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-droplet"></span>
+					<span class="icon solid major fa-cloud"></span>
 					<h1>Hi, I'm <strong>Prashant</strong>, a professional Water Engineer<br />
 					who writes about water treatment systems on <a href="https://wastewaterclub.com">Waste Water Club</a>.</h1>
 					<p>I've spent a lot of time working on wastewater treatment systems<br />
-					and have a good understanding of various treatment methods.<br />
+					and have a good understanding of various treatment methodologies.<br />
 					Scroll down to learn more about me.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
@@ -35,7 +35,7 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Here is a brief profile summary of myself that is<br />
+								<h2>Here is a brief profile summary of myself that is
 								as intriguing as I am.</h2>
 							</header>
 							<p>Detail oriented Water Engineer with 5+ years of experience and a zest for solving
@@ -66,12 +66,25 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>What makes me more interesting is that I am always trying to do something new.<br />
-								Here are some of the highlights of my past experiences.</h2>
+								<h2>Here are some of the highlights of my past experiences.</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<h3>Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019</h3>
+							<h3>Client: <strong>National Mission for Clean Ganga and the project component includes</strong></h3>
+							<h4>20 MLD Tannery Common Effluent Treatment Plant (CETP)</h4>
+							<h4>900 KLD Common Chrome Recovery Unit (CCRU)</h4>
+							<h4>200 KLD Pilot Zero Liquid Discharge Plant (ZLD)</h4>
+							<h4>30 Kms Collection & Conveyance System</h4>
+							<p>Worked with Project Manager for monitoring of 20 MLD CETP, 900 KLD CCRU & Pilot ZLD project during design and construction phases.</p>
+							<p>Carried out primary treatment units design analysis in 400 member industries and suggested design changes.</p>
+							<p>Assisted Process Engineer in reviewing Basic Engineering Package, preliminary designs, planning and other relevant documents.</p>
+							<p>Interpreted plans and specifications to support construction manager during project implementation.</p>
+							<p>Monitored construction, equipment installation and inspections.</p>
+							<p>Coordinated projects by working with other engineers, contractors and regulatory agencies.</p>
+							<p>Created reports for daily, weekly and monthly reporting.</p>
+							<p>Attended stakeholders meetings and events to address questions and explain project details.</p>
+							<p>Prepared standard reports and documentation to communicate results to senior management.</p>
+							<p>Participated in site visits, helping to survey ongoing and planned installations.</p>
+							<p>Prepared bid proposals under supervision of senior engineers.</p>
 						</div>
 					</div>
 				</div>
