Correct twic experience

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/prashant.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -38,7 +39,7 @@
 								<h2>Here is a brief profile summary of myself that is
 								as intriguing as I am.</h2>
 							</header>
-							<p>Detail oriented Water Engineer with 5+ years of experience and a zest for solving
+							<p class="profile_summary">Detail oriented Water Engineer with 5+ years of experience and a zest for solving
 							complex problems using outcome-based approach. I have experience in water
 							treatment system project planning and construction oversight of India's largest 20
 							MLD Tannery common effluent treatment project in Kanpur. Contributed actively to design review and provided assistance during the project construction phase.</p>
@@ -68,23 +69,16 @@
 							<header class="major">
 								<h2>Here are some of the highlights of my past experiences.</h2>
 							</header>
-							<h3>Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019</h3>
-							<h3>Client: <strong>National Mission for Clean Ganga and the project component includes</strong></h3>
-							<h4>20 MLD Tannery Common Effluent Treatment Plant (CETP)</h4>
-							<h4>900 KLD Common Chrome Recovery Unit (CCRU)</h4>
-							<h4>200 KLD Pilot Zero Liquid Discharge Plant (ZLD)</h4>
-							<h4>30 Kms Collection & Conveyance System</h4>
-							<p>Worked with Project Manager for monitoring of 20 MLD CETP, 900 KLD CCRU & Pilot ZLD project during design and construction phases.</p>
-							<p>Carried out primary treatment units design analysis in 400 member industries and suggested design changes.</p>
-							<p>Assisted Process Engineer in reviewing Basic Engineering Package, preliminary designs, planning and other relevant documents.</p>
-							<p>Interpreted plans and specifications to support construction manager during project implementation.</p>
-							<p>Monitored construction, equipment installation and inspections.</p>
-							<p>Coordinated projects by working with other engineers, contractors and regulatory agencies.</p>
-							<p>Created reports for daily, weekly and monthly reporting.</p>
-							<p>Attended stakeholders meetings and events to address questions and explain project details.</p>
-							<p>Prepared standard reports and documentation to communicate results to senior management.</p>
-							<p>Participated in site visits, helping to survey ongoing and planned installations.</p>
-							<p>Prepared bid proposals under supervision of senior engineers.</p>
+							<p>Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019</p>
+							<p>Client: <strong>National Mission for Clean Ganga and the project component includes</strong></p>
+							<p>20 MLD Tannery Common Effluent Treatment Plant (CETP)</p>
+							<p>900 KLD Common Chrome Recovery Unit (CCRU)</p>
+							<p>200 KLD Pilot Zero Liquid Discharge Plant (ZLD)</p>
+							<p>30 Kms Collection & Conveyance System</p>
+							<p>Assisted the Project Manager in monitoring the design and construction phases of the 20 MLD CETP, 900 KLD CCRU, and Pilot ZLD projects. Primary treatment unit design analysis was performed in 400 member industries, and design changes were suggested.
+							Assisting the Process Engineer with the review of the Basic Engineering Package, preliminary designs, planning, and other relevant documents. Plans and specifications were interpreted to assist the construction manager during project implementation.</p>
+							<p>Construction, equipment installation, and inspections were all closely monitored. Projects were coordinated by collaborating with other engineers, contractors, and regulatory agencies. Reports for daily, weekly, and monthly reporting were created. Participated in stakeholder meetings and events in order to answer questions and explain project details. 
+							Standard reports and documentation were prepared to communicate results to senior management. Participated in site visits, surveying current and planned installations. Prepared bid proposals under supervision of senior engineers.</p>
 						</div>
 					</div>
 				</div>
