--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							treatment system project planning and construction oversight of India's largest 20
 							MLD Tannery common effluent treatment project in Kanpur. Contributed actively to design review and provided assistance during the project construction phase.</p>
 						</div>
-						<div class="col-6 col-12-medium imp-medium">
+						<div class="col-6 col-12-medium imp-medium summary_image">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
 						</div>
 					</div>
@@ -69,15 +69,11 @@
 							<header class="major">
 								<h2>Here are some of the highlights of my past experiences.</h2>
 							</header>
-							<p>Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019</p>
-							<p>Client: <strong>National Mission for Clean Ganga and the project component includes</strong></p>
-							<p>20 MLD Tannery Common Effluent Treatment Plant (CETP)</p>
-							<p>900 KLD Common Chrome Recovery Unit (CCRU)</p>
-							<p>200 KLD Pilot Zero Liquid Discharge Plant (ZLD)</p>
-							<p>30 Kms Collection & Conveyance System</p>
-							<p>Assisted the Project Manager in monitoring the design and construction phases of the 20 MLD CETP, 900 KLD CCRU, and Pilot ZLD projects. Primary treatment unit design analysis was performed in 400 member industries, and design changes were suggested.
+							<p class="profile_summary">Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019 on a project sanctioned by<strong>National Mission for Clean Ganga</strong> the project components include</p>
+							<p class="profile_summary">20 MLD Tannery Common Effluent Treatment Plant (CETP), <p>900 KLD Common Chrome Recovery Unit (CCRU), 200 KLD Pilot Zero Liquid Discharge Plant (ZLD) and 30 Kms Collection & Conveyance System</p>
+							<p class="profile_summary">Assisted the Project Manager in monitoring the design and construction phases of the 20 MLD CETP, 900 KLD CCRU, and Pilot ZLD projects. Primary treatment unit design analysis was performed in 400 member industries, and design changes were suggested.
 							Assisting the Process Engineer with the review of the Basic Engineering Package, preliminary designs, planning, and other relevant documents. Plans and specifications were interpreted to assist the construction manager during project implementation.</p>
-							<p>Construction, equipment installation, and inspections were all closely monitored. Projects were coordinated by collaborating with other engineers, contractors, and regulatory agencies. Reports for daily, weekly, and monthly reporting were created. Participated in stakeholder meetings and events in order to answer questions and explain project details. 
+							<p class="profile_summary">Construction, equipment installation, and inspections were all closely monitored. Projects were coordinated by collaborating with other engineers, contractors, and regulatory agencies. Reports for daily, weekly, and monthly reporting were created. Participated in stakeholder meetings and events in order to answer questions and explain project details. 
 							Standard reports and documentation were prepared to communicate results to senior management. Participated in site visits, surveying current and planned installations. Prepared bid proposals under supervision of senior engineers.</p>
 						</div>
 					</div>
