add social media

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 							<header class="major">
 								<h2>Here are some of the highlights of my past experiences.</h2>
 							</header>
-							<p class="profile_summary">Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019 on a project sanctioned by<strong>National Mission for Clean Ganga</strong> the project components include</p>
-							<p class="profile_summary">20 MLD Tannery Common Effluent Treatment Plant (CETP), <p>900 KLD Common Chrome Recovery Unit (CCRU), 200 KLD Pilot Zero Liquid Discharge Plant (ZLD) and 30 Kms Collection & Conveyance System</p>
+							<p class="profile_summary">Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019 on a project sanctioned by <strong>National Mission for Clean Ganga</strong> the project includes:</p>
+							<p class="profile_summary">20 MLD Tannery Common Effluent Treatment Plant (CETP), 900 KLD Common Chrome Recovery Unit (CCRU), 200 KLD Pilot Zero Liquid Discharge Plant (ZLD) and 30 Kms Collection & Conveyance System</p>
 							<p class="profile_summary">Assisted the Project Manager in monitoring the design and construction phases of the 20 MLD CETP, 900 KLD CCRU, and Pilot ZLD projects. Primary treatment unit design analysis was performed in 400 member industries, and design changes were suggested.
 							Assisting the Process Engineer with the review of the Basic Engineering Package, preliminary designs, planning, and other relevant documents. Plans and specifications were interpreted to assist the construction manager during project implementation.</p>
 							<p class="profile_summary">Construction, equipment installation, and inspections were all closely monitored. Projects were coordinated by collaborating with other engineers, contractors, and regulatory agencies. Reports for daily, weekly, and monthly reporting were created. Participated in stakeholder meetings and events in order to answer questions and explain project details. 
@@ -451,11 +451,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://www.linkedin.com/in/prashant-pal-a60ba01a0/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://twitter.com/palprashantt" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/prashantt41" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/pal.prashantt/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/prashantt41" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
