Replace profile_summary with summary_align & change copyright text and website

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<h2>Here is a brief profile summary of myself that is
 								as intriguing as I am.</h2>
 							</header>
-							<p class="profile_summary">Detail oriented Water Engineer with 5+ years of experience and a zest for solving
+							<p class="summary_align">Detail oriented Water Engineer with 5+ years of experience and a zest for solving
 							complex problems using outcome-based approach. I have experience in water
 							treatment system project planning and construction oversight of India's largest 20
 							MLD Tannery common effluent treatment project in Kanpur. Contributed actively to design review and provided assistance during the project construction phase.</p>
@@ -69,11 +69,11 @@
 							<header class="major">
 								<h2>Here are some of the highlights of my past experiences.</h2>
 							</header>
-							<p class="profile_summary">Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019 on a project sanctioned by <strong>National Mission for Clean Ganga</strong> the project includes:</p>
-							<p class="profile_summary">20 MLD Tannery Common Effluent Treatment Plant (CETP), 900 KLD Common Chrome Recovery Unit (CCRU), 200 KLD Pilot Zero Liquid Discharge Plant (ZLD) and 30 Kms Collection & Conveyance System</p>
-							<p class="profile_summary">Assisted the Project Manager in monitoring the design and construction phases of the 20 MLD CETP, 900 KLD CCRU, and Pilot ZLD projects. Primary treatment unit design analysis was performed in 400 member industries, and design changes were suggested.
+							<p class="summary_align">Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019 on a project sanctioned by <strong>National Mission for Clean Ganga</strong> the project includes:</p>
+							<p class="summary_align">20 MLD Tannery Common Effluent Treatment Plant (CETP), 900 KLD Common Chrome Recovery Unit (CCRU), 200 KLD Pilot Zero Liquid Discharge Plant (ZLD) and 30 Kms Collection & Conveyance System</p>
+							<p class="summary_align">Assisted the Project Manager in monitoring the design and construction phases of the 20 MLD CETP, 900 KLD CCRU, and Pilot ZLD projects. Primary treatment unit design analysis was performed in 400 member industries, and design changes were suggested.
 							Assisting the Process Engineer with the review of the Basic Engineering Package, preliminary designs, planning, and other relevant documents. Plans and specifications were interpreted to assist the construction manager during project implementation.</p>
-							<p class="profile_summary">Construction, equipment installation, and inspections were all closely monitored. Projects were coordinated by collaborating with other engineers, contractors, and regulatory agencies. Reports for daily, weekly, and monthly reporting were created. Participated in stakeholder meetings and events in order to answer questions and explain project details. 
+							<p class="summary_align">Construction, equipment installation, and inspections were all closely monitored. Projects were coordinated by collaborating with other engineers, contractors, and regulatory agencies. Reports for daily, weekly, and monthly reporting were created. Participated in stakeholder meetings and events in order to answer questions and explain project details. 
 							Standard reports and documentation were prepared to communicate results to senior management. Participated in site visits, surveying current and planned installations. Prepared bid proposals under supervision of senior engineers.</p>
 						</div>
 					</div>
@@ -458,7 +458,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="https://github.com/prashantt41" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Prashant</li><li><!--any text can be added here--><a href="http://wastewaterclub.com">WasteWaterClub</a></li>
 				</ul>
 			</section>
 
