--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 					</ul>
 				</div>
 			</section>
-<!--
+
 		<!-- Five -->
-			<section id="five" class="main style1">
+<!--			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
 						<h2>Elements</h2>
