Reduce summary words

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<h1>Hi, I'm <strong>Prashant</strong>, a professional Water Engineer<br />
 					who writes about water treatment systems on <a href="https://wastewaterclub.com">Waste Water Club</a>.</h1>
 					<p>I've spent a lot of time working on wastewater treatment systems<br />
-					and have a good understanding of various treatment methodologies.<br />
+					and have a good understanding of various water treatment methodologies.<br />
 					Scroll down to learn more about me.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
@@ -39,7 +39,7 @@
 								<h2>Here is a brief profile summary of myself that is
 								as intriguing as I am.</h2>
 							</header>
-							<p class="summary_align">Detail oriented Water Engineer with 5+ years of experience and a zest for solving
+							<p class="summary_align">I am a detail oriented Water Engineer with 5+ years of experience and a zest for solving
 							complex problems using outcome-based approach. I have experience in water
 							treatment system project planning and construction oversight of India's largest 20
 							MLD Tannery common effluent treatment project in Kanpur. Contributed actively to design review and provided assistance during the project construction phase.</p>
@@ -56,25 +56,17 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
+							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Here are some of the highlights of my past experiences.</h2>
+								<h2>Here is something about my current work profile</h2>
 							</header>
-							<p class="summary_align">Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019 on a project sanctioned by <strong>National Mission for Clean Ganga</strong> the project includes:</p>
+							<p class="summary_align">Presently working as Graduate Engineer with <strong>Tamilnadu Water Investment Co. Ltd.</strong> from October 2019 on a project sanctioned by <strong>National Mission for Clean Ganga</strong>. The project includes:</p>
 							<p class="summary_align">20 MLD Tannery Common Effluent Treatment Plant (CETP), 900 KLD Common Chrome Recovery Unit (CCRU), 200 KLD Pilot Zero Liquid Discharge Plant (ZLD) and 30 Kms Collection & Conveyance System</p>
-							<p class="summary_align">Assisted the Project Manager in monitoring the design and construction phases of the 20 MLD CETP, 900 KLD CCRU, and Pilot ZLD projects. Primary treatment unit design analysis was performed in 400 member industries, and design changes were suggested.
-							Assisting the Process Engineer with the review of the Basic Engineering Package, preliminary designs, planning, and other relevant documents. Plans and specifications were interpreted to assist the construction manager during project implementation.</p>
-							<p class="summary_align">Construction, equipment installation, and inspections were all closely monitored. Projects were coordinated by collaborating with other engineers, contractors, and regulatory agencies. Reports for daily, weekly, and monthly reporting were created. Participated in stakeholder meetings and events in order to answer questions and explain project details. 
-							Standard reports and documentation were prepared to communicate results to senior management. Participated in site visits, surveying current and planned installations. Prepared bid proposals under supervision of senior engineers.</p>
+							<p class="summary_align">I worked with the Project Manager to oversee the design and construction phases of the 20 MLD CETP, 900 KLD CCRU, and 200 KLD Pilot ZLD projects. In 400 member industries, primary treatment unit design study was undertaken, and design improvements were advised. I helped the Process Manager in reviewing the Basic Engineering Package, early designs, planning, and other related materials.</p>
+							<p class="summary_align">Plans and requirements were interpreted to aid the project management throughout construction. To communicate the outcomes to upper management, standard reports and documentation were developed. Under the direction of senior engineers, I prepared bid proposals.</p>
 						</div>
 					</div>
 				</div>
