--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<section id="two" class="main style2">
 				<div class="container">
 					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
+						<div class="col-6 col-12-medium currentwork_image">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
 						</div>
@@ -76,33 +76,37 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>Here are some of my previous experiences</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p>I did something amazing in these organisations and became everyone's favourite.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
+							<h3>Environmental Consultant at AmorFarm Agriproducts LLP</h3>
+							<p>Here, I worked on process schemes to improve energy efficiency and introduced recycling programmes in the dairy processing plant. 
+							Supervised the design of system processes and proposed cleaner technology equipment to control, manage, and remediate water, air, and soil pollution. Analyzed historical inspection data to determine pollution and contamination levels entering the ETP and proposed various measures to ensure the ETP's success.</p>
+							<!--<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
+							<h3>Research Assistant at HBTU Kanpur</h3>
+							<p>I was part of a team that inspected approximately 100 GPIs (gross polluting industries) such as textile mills, sugar mills, tanneries, and slaughterhouses. 
+							The extensive research data was analysed using systematic tools, and representative graphs and charts highlighting results were created for presentations. 
+							Different types of lab equipment were maintained and calibrated. Coordinated for qualitative research with Principal Investigator. Analyzed various water and material samples statistically, qualitatively, and quantitatively.</p>
+							<!-- <ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
+							<h3>Research assistant at Wrig Nanosystems Pvt. Ltd.</h3>
+							<p>Collaborated with a team to create an indigenous Hemoglobin Testing Device. Developed a product to operate medical hardware and software used in the completion of various experiments. 
+							Collaborated with multidisciplinary specialists to research and develop potential solutions to issues such as V.Off detection, False Interpretation, and so on. Resolved data and recorded discrepancies with actionable corrective solution for blood draining protocol.</p>
+							<!-- <ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 				</div>
