Justify previous experieces * and replace cloud icon with water droplet degree

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/prashant.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-cloud"></span>
+					<i class="fa-regular fa-droplet-degree"></i>
 					<h1>Hi, I'm <strong>Prashant</strong>, a professional Water Engineer<br />
 					who writes about water treatment systems on <a href="https://wastewaterclub.com">Waste Water Club</a>.</h1>
 					<p>I've spent a lot of time working on wastewater treatment systems<br />
@@ -83,7 +84,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
 							<h3>Environmental Consultant at AmorFarm Agriproducts LLP</h3>
-							<p>Here, I worked on process schemes to improve energy efficiency and introduced recycling programmes in the dairy processing plant. 
+							<p class="summary_align">Here, I worked on process schemes to improve energy efficiency and introduced recycling programmes in the dairy processing plant. 
 							Supervised the design of system processes and proposed cleaner technology equipment to control, manage, and remediate water, air, and soil pollution. Analyzed historical inspection data to determine pollution and contamination levels entering the ETP and proposed various measures to ensure the ETP's success.</p>
 							<!--<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
@@ -92,7 +93,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<h3>Research Assistant at HBTU Kanpur</h3>
-							<p>I was part of a team that inspected approximately 100 GPIs (gross polluting industries) such as textile mills, sugar mills, tanneries, and slaughterhouses. 
+							<p class="summary_align">I was part of a team that inspected approximately 100 GPIs (gross polluting industries) such as textile mills, sugar mills, tanneries, and slaughterhouses. 
 							The extensive research data was analysed using systematic tools, and representative graphs and charts highlighting results were created for presentations. 
 							Different types of lab equipment were maintained and calibrated. Coordinated for qualitative research with Principal Investigator. Analyzed various water and material samples statistically, qualitatively, and quantitatively.</p>
 							<!-- <ul class="actions special">
@@ -102,7 +103,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3>Research assistant at Wrig Nanosystems Pvt. Ltd.</h3>
-							<p>Collaborated with a team to create an indigenous Hemoglobin Testing Device. Developed a product to operate medical hardware and software used in the completion of various experiments. 
+							<p class="summary_align">Collaborated with a team to create an indigenous Hemoglobin Testing Device. Developed a product to operate medical hardware and software used in the completion of various experiments. 
 							Collaborated with multidisciplinary specialists to research and develop potential solutions to issues such as V.Off detection, False Interpretation, and so on. Resolved data and recorded discrepancies with actionable corrective solution for blood draining protocol.</p>
 							<!-- <ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
