Correct fa cdn and padding

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/prashant.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<i class="fa-regular fa-droplet-degree"></i>
+					<i class="fa fa-tint fa-4x water_drop" aria-hidden="true"></i> 
 					<h1>Hi, I'm <strong>Prashant</strong>, a professional Water Engineer<br />
 					who writes about water treatment systems on <a href="https://wastewaterclub.com">Waste Water Club</a>.</h1>
 					<p>I've spent a lot of time working on wastewater treatment systems<br />
