Add about published articles

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="col-6 col-12-medium">
 							<header class="major">
 								<h2>Here is a brief profile summary of myself that is
-								as intriguing as I am.</h2>
+								as intriguing as I am</h2>
 							</header>
 							<p class="summary_align">I am a detail oriented Water Engineer with 5+ years of experience and a zest for solving
 							complex problems using outcome-based approach. I have experience in water
@@ -103,7 +103,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Research assistant at Wrig Nanosystems Pvt. Ltd.</h3>
+							<h3>Research Assistant at Wrig Nanosystems Pvt. Ltd.</h3>
 							<p class="summary_align">Collaborated with a team to create an indigenous Hemoglobin Testing Device. Developed a product to operate medical hardware and software used in the completion of various experiments. 
 							Collaborated with multidisciplinary specialists to research and develop potential solutions to issues such as V.Off detection, False Interpretation, and so on. Resolved data and recorded discrepancies with actionable corrective solution for blood draining protocol.</p>
 							<!-- <ul class="actions special">
@@ -118,13 +118,39 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
+						<h2>They say that learning is an ongoing process</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
-					<ul class="actions special">
+					<p>As a result, I try to learn something new every day. Here are some of my most well-known articles.</p>
+					<div class="row gtr-150">
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<h3>Bioremediation- Everything you need to know</h3>
+							<p class="summary_align">Bioremediation is the use of living organisms, primarily microorganisms, to treat environmental pollutants and detoxify them into less toxic forms. This process uses bacteria, fungi, or plants to detoxify pollutants. These organisms grow and eat pollutants by breaking them down into smaller forms through enzymatic reactions.</p>
+							<ul class="actions special">
+								<li><a href="https://www.wastewaterclub.com/bioremediation-everything-you-need-to-know/" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h3>What is the Tertiary Treatment of Wastewater?</h3>
+							<p class="summary_align">The tertiary treatment removes nitrogen and phosphorous present in wastewater. It includes processes such as filtration, coagulation, reverse osmosis, ion exchange, activated carbon filter, electro-dialysis, nitrification-denitrification processes. This stage disinfects water for recycling and reuse.</p>
+							<ul class="actions special">
+								<li><a href="https://www.wastewaterclub.com/what-is-tertiary-treatment-of-wastewater/" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h3>What is the Secondary Treatment of Wastewater?</h3>
+							<p class="summary_align">Secondary Treatment of Wastewater involves the removal of biodegradable organic matter using microbial community. The microbial biomass present in the wastewater reproduces in certain ways and during the process, they utilize organic matters, minerals, and various other growth-related substances from the wastewater. Thus, resulting in decreasing the number of biodegradable solids.</p>
+							<ul class="actions special">
+								<li><a href="https://www.wastewaterclub.com/what-is-the-secondary-treatment-of-wastewater/" class="button">Read More</a></li>
+							</ul>
+						</div>
+					<!-- <ul class="actions special">
 						<li><a href="#" class="button wide primary">Sign Up</a></li>
 						<li><a href="#" class="button wide">Learn More</a></li>
-					</ul>
+					</ul>-->
+					</div>
 				</div>
 			</section>
 
