--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3>What is the Secondary Treatment of Wastewater?</h3>
-							<p class="summary_align">Secondary Treatment of Wastewater involves the removal of biodegradable organic matter using microbial community. The microbial biomass present in the wastewater reproduces in certain ways and during the process, they utilize organic matters, minerals, and various other growth-related substances from the wastewater. Thus, resulting in decreasing the number of biodegradable solids.</p>
+							<p class="summary_align">Secondary Treatment of Wastewater involves the removal of biodegradable organic matter using microbial community. The microbial biomass present in the wastewater reproduces in certain ways and during the process, they utilize organic matters, minerals, and various other growth-related substances from the wastewater.</p>
 							<ul class="actions special">
 								<li><a href="https://www.wastewaterclub.com/what-is-the-secondary-treatment-of-wastewater/" class="button">Read More</a></li>
 							</ul>
