Add download CV button in footer *tried something

--- a/index.html
+++ b/index.html
@@ -472,6 +472,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 -->
 		<!-- Footer -->
 			<section id="footer">
+				<header class="major">
+					<h2>My profile piqued your interest? Download my curriculum vitae</h2>
+				</header>
+				<p>It is always preferable to have something offline. In case you ran out of data while viewing my profile.</p>
+				<ul class="actions special">
+						<li><a href="#" class="button wide primary">Download CV</a></li>
+				</ul>				
+				<header class="major">
+					<h3>Do you want to socialise? Perhaps for future reference.</h3>
+				</header>				
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/prashant-pal-a60ba01a0/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://twitter.com/palprashantt" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
