--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							MLD Tannery common effluent treatment project in Kanpur. Contributed actively to design review and provided assistance during the project construction phase.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium summary_image">
-							<span class="image fit"><img src="images/pic001.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic001.jpeg" alt="" /></span>
 						</div>
 					</div>
 				</div>
