--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<header class="major">
 						<h2>They say that learning is an ongoing process</h2>
 					</header>
-					<p>As a result, I try to learn something new every day. Here are some of my most well-known articles.</p>
+					<p>That is why I try to learn something new every day. Here are some of my most popular articles.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic031.jpg" alt="" /></span>
